# wasm-wumpus

./: Cargo.toml  LICENSE_MIT  README.md  index.html  style.css
pkg/: hunt_the_wumpus_wasm.d.ts  hunt_the_wumpus_wasm.js  hunt_the_wumpus_wasm_bg.js  hunt_the_wumpus_wasm_bg.wasm  hunt_the_wumpus_wasm_bg.wasm.d.ts  package.json
src/: game.rs  lib.rs
src/game/: entity.rs  grid.rs
tests/: web.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
