[package]
name = "hunt-the-wumpus-wasm"
version = "0.1.0"
authors = ["Braden Everson <bradeneverson@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
